@@ -1,11 +1,10 @@
-
 Source: saga
 Section: science
 Priority: optional
 Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
 Uploaders: Johan Van de Wauw <johan.vandewauw@gmail.com>, Francesco Paolo Lovergine <frankie@debian.org>
 Build-Depends: libwxgtk2.8-dev, wx-common, libgdal-dev, libexpat-dev,
- libogdi3.2-dev, libproj-dev|proj, libgrib2c-dev, debhelper (>= 7.0.50~),
+ libogdi3.2-dev, libproj-dev, libgrib2c-dev, debhelper (>=8), 
  libqhull-dev, libhpdf-dev
 Standards-Version: 3.9.1
 Homepage: http://www.saga-gis.org/
