@@ -1,13 +1,12 @@
-
 Source: saga
 Section: science
 Priority: optional
 Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
 Uploaders: Johan Van de Wauw <johan.vandewauw@gmail.com>, Francesco Paolo Lovergine <frankie@debian.org>
 Build-Depends: libwxgtk2.8-dev, wx-common, libgdal-dev, libexpat-dev,
- libogdi3.2-dev, libproj-dev|proj, libgrib2c-dev, debhelper (>=7), cdbs,
+ libogdi3.2-dev, libproj-dev, libgrib2c-dev, debhelper (>=8), 
  libqhull-dev, libhpdf-dev
-Standards-Version: 3.9.0
+Standards-Version: 3.9.1
 Homepage: http://www.saga-gis.org/
 Vcs-Git: git://git.debian.org/pkg-grass/saga.git
 Vcs-Browser: http://git.debian.org/?p=pkg-grass/saga.git
