@@ -1,8 +1,15 @@
 saga (2.0.6+dfsg-0) unstable; urgency=low
 
+  [ Johan Van de Wauw ]
   * Update to 2.0.6 
 
- -- Johan Van de Wauw <johan.vandewauw@gmail.com>  Fri, 25 Mar 2011 23:06:01 +0100
+  [ Francesco Paolo Lovergine ]
+  * Dropped obsolete pre-squeeze proj alternative build-dep.
+  * Policy bumped to current 3.9.1, without changes.
+  * Dropped cdbs dependency, now using debhelper dh_* rules.
+  * Using source 3.0 format with quilt support.
+
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 26 Mar 2011 16:27:55 +0100
 
 saga (2.0.5+dfsg-0) unstable; urgency=low
 
